tests/reference/asr-type_mismatch1-550e457.stderr
semantic error: Type mismatch in assignment
 --> tests/errors/type_mismatch1.f90:4:1
  |
4 | x = "x"
  | ^^^^^^^ 
